# object-fs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  debug.sh  docker-compose.yaml  fs.c  mount.sh  objectfs.c  objectfs.cpp  run.sh  scratch.c  unmount.sh
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml  tests.yaml
src/: adapters.rs  fs.rs  fuse.rs  main.rs  model.rs  util.rs
src/adapters/: adapter.rs  gcs.rs  mock.rs  s3.rs
src/model/: fs.rs  s3.rs
src/util/: fs.rs  object.rs  poll.rs
