[package]
name = "object-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.60.0"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
env_logger = "0.11.5"
fuser = "0.15.0"
futures = "0.3.31"
google-cloud-storage = "0.22.1"
libc = "0.2.162"
log = "0.4.22"
time = "0.3.36"
