[package]
name = "objectfs"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.64.0"
clap = { version = "4.5.26", features = ["cargo", "derive"] }
env_logger = "0.11.6"
fuser = "0.15.1"
futures = "0.3.31"
google-cloud-storage = "0.23.0"
libc = "0.2.169"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
